@@ -55,10 +55,8 @@
 //==========================================================================
 
 #include <pkgconf/hal.h>
-#include <pkgconf/kernel.h>
 #include <pkgconf/io_fileio.h>
 
-#include <cyg/kernel/ktypes.h>         // base kernel types
 #include <cyg/infra/cyg_trac.h>        // tracing macros
 #include <cyg/infra/cyg_ass.h>         // assertion macros
 
@@ -66,7 +64,6 @@
 
 #include "fio.h"                       // Private header
 
-#include <cyg/kernel/mutex.hxx>        // mutex definitions
 
 //==========================================================================
 // File object locking
